# WSP-Sniper

./: .env.example  .gitignore  .pre-commit-config.yaml  .repomixignore  LICENSE  README.md  app.py  main.py  pyproject.toml  repomix.config.json  requirements.txt
config/: settings.py  setup.py
src/api/: client.py
src/core/: registration.py  scheduler.py
src/ui/: cli.py  formatting.py
src/ui/cli/: formatting.py  menu.py
src/ui/web/: dashboard.py  layout.py  logs.py  scheduler.py  sidebar.py
src/utils/: colors.py  helpers.py  logging.py  storage.py
